<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            android:layout_margin="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    >
                    <ImageView
                        android:id="@+id/bankBalanceImageId"
                        android:contentDescription="@string/bank_balance_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_account_balance"
                        android:layout_weight="0.5"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:id="@+id/availableBalanceHeadingId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/available_balance_heading"
                        android:layout_weight="1"
                        android:textAlignment="textStart"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        android:fontFamily="@font/armata"
                        android:layout_gravity="start"
                        />
                    <TextView
                        android:id="@+id/amountId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount_in_account"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:fontFamily="@font/armata"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size"
                        android:layout_gravity="end"
                        />


                </LinearLayout>



                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:padding="8dp"
                        >
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/bank_image"
                            android:src="@drawable/ic_gtb"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:padding="8dp"
                        >
                        <TextView
                            android:id="@+id/accountNumberID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/account_number"
                            android:textSize="@dimen/card_textSize"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:id="@+id/bank_nameId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bank_name"
                            android:textSize="@dimen/card_textSize"
                            />
                        <TextView
                            android:id="@+id/timingId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/timing"
                            android:textSize="@dimen/card_textSize"
                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:padding="8dp"
                        >

                        <ImageView
                            android:id="@+id/deleteCardBalanceInfoId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_clear"
                            android:layout_weight="1"
                            android:layout_gravity="end"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/amount_on_card_bank_balance"
                            android:textSize="@dimen/card_textSize"
                            android:layout_weight="1"
                            android:layout_gravity="end"
                            android:textStyle="bold"
                            />

                    </LinearLayout>



                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

</LinearLayout>