<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Overview">

    <include
        android:id="@+id/overviewToolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/transactionInfoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/overviewToolbar"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardElevation="4dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                >

                <TextView
                    android:id="@+id/transactionInformId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:fontFamily="@font/armata"
                    android:gravity="center"
                    android:text="@string/transaction_info"
                    android:textSize="@dimen/card_textSize"
                    android:textStyle="normal" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_check_circle_new"
                    android:contentDescription="@string/image_description_trans"
                    android:layout_weight="1"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/secureDetailsId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/transactionInfoId"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardElevation="4dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                >

                <TextView
                    android:id="@+id/securedDetailsMsgId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/armata"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/secure_your_app"
                    android:textSize="@dimen/card_textSize"
                    android:textStyle="normal" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/lock"
                    android:contentDescription="@string/image_description_trans"
                    android:layout_weight="1"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/bankBalanceDetailsId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secureDetailsId"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bankAccountBalanceRecordRecyclerViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/bank_balance_item"
                />

        </FrameLayout>

    </LinearLayout>





</RelativeLayout>
</ScrollView>